@@ -4,7 +4,8 @@ Released 2.4.23 2016-01-xx
 Changes since 2.4.22:
 
 Modules/
-* 
+* Ref count issue in attrs_from_List() was fixed
+  (thanks to Elmir Jagudin)
 
 ----------------------------------------------------------------
 Released 2.4.22 2015-10-25
@@ -1224,4 +1225,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.365 2016/01/16 19:00:47 stroeder Exp $
+$Id: CHANGES,v 1.366 2016/01/16 19:08:34 stroeder Exp $
